# learning_leptos

./: Cargo.toml  README.MD  index.html  package-lock.json
src/: main.rs
style/: output.css
